--- a/style.css
+++ b/style.css
@@ -511,8 +511,8 @@
 /* --- Navigation --- */
 @media (max-width: 800px) {
   .navbar {
-    flex-direction: column;
-    align-items: flex-start;
+  
+    align-items: center;
     padding: 18px 20px;
     gap: 8px;
   }
@@ -530,11 +530,15 @@
   }
 
   .slideshow button.prev {
-    left: 20px;
+    left: 40px;
+    top: 350px;
+    color: #ffffff;
   }
 
   .slideshow button.next {
-    right: 20px;
+    right: 40px;
+     top: 350px;
+    color: #ffffff;
   }
 }
 
